--- a/src/positrack.glade
+++ b/src/positrack.glade
@@ -507,19 +507,37 @@ You should have received a copy of the GNU General Public License along with gac
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <child>
-              <object class="GtkRadioButton" id="firewirecamera_radiobutton">
-                <property name="label" translatable="yes">Firewire camera via libdc1394</property>
+              <object class="GtkRadioButton" id="firewirecamerablackwhite_radiobutton">
+                <property name="label" translatable="yes">Firewire black and white camera via libdc1394</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
                 <property name="xalign">0</property>
                 <property name="draw_indicator">True</property>
                 <property name="group">usbcamera_radiobutton</property>
+                <signal name="toggled" handler="on_usbcamera_radiobutton_toggled" after="yes" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">True</property>
                 <property name="fill">True</property>
                 <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkRadioButton" id="firewirecameracolor_radiobutton">
+                <property name="label" translatable="yes">Firewire color camera via libdc1394</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">False</property>
+                <property name="xalign">0</property>
+                <property name="active">True</property>
+                <property name="draw_indicator">True</property>
+                <property name="group">usbcamera_radiobutton</property>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
               </packing>
             </child>
             <child>
@@ -536,7 +554,7 @@ You should have received a copy of the GNU General Public License along with gac
               <packing>
                 <property name="expand">True</property>
                 <property name="fill">True</property>
-                <property name="position">1</property>
+                <property name="position">2</property>
               </packing>
             </child>
           </object>
