--- a/src/positrack.glade
+++ b/src/positrack.glade
@@ -371,11 +371,29 @@ You should have received a copy of the GNU General Public License along with gac
                 <property name="xalign">0</property>
                 <property name="draw_indicator">True</property>
                 <property name="group">singlewhitespot_radiobutton</property>
+                <signal name="toggled" handler="on_singlewhitespot_radiobutton_toggled" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">True</property>
                 <property name="fill">True</property>
                 <property name="position">1</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkRadioButton" id="redgreenbluespots_radiobutton">
+                <property name="label" translatable="yes">Object between red green blue spots 
+(red=right, blue=right, green=back)</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">False</property>
+                <property name="xalign">0</property>
+                <property name="draw_indicator">True</property>
+                <property name="group">singlewhitespot_radiobutton</property>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">2</property>
               </packing>
             </child>
           </object>
@@ -514,8 +532,7 @@ You should have received a copy of the GNU General Public License along with gac
                 <property name="receives_default">False</property>
                 <property name="xalign">0</property>
                 <property name="draw_indicator">True</property>
-                <property name="group">usbcamera_radiobutton</property>
-                <signal name="toggled" handler="on_usbcamera_radiobutton_toggled" after="yes" swapped="no"/>
+                <signal name="toggled" handler="on_firewirecamerablackwhite_radiobutton_toggled" after="yes" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -532,29 +549,12 @@ You should have received a copy of the GNU General Public License along with gac
                 <property name="xalign">0</property>
                 <property name="active">True</property>
                 <property name="draw_indicator">True</property>
-                <property name="group">usbcamera_radiobutton</property>
+                <property name="group">firewirecamerablackwhite_radiobutton</property>
               </object>
               <packing>
                 <property name="expand">True</property>
                 <property name="fill">True</property>
                 <property name="position">1</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkRadioButton" id="usbcamera_radiobutton">
-                <property name="label" translatable="yes">USB camera via v4l2</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">False</property>
-                <property name="xalign">0</property>
-                <property name="active">True</property>
-                <property name="draw_indicator">True</property>
-                <signal name="toggled" handler="on_usbcamera_radiobutton_toggled" after="yes" swapped="no"/>
-              </object>
-              <packing>
-                <property name="expand">True</property>
-                <property name="fill">True</property>
-                <property name="position">2</property>
               </packing>
             </child>
           </object>
