include the data automatically

--- a/src/positrack.glade
+++ b/src/positrack.glade
@@ -829,7 +829,7 @@ You should have received a copy of the GNU General Public License along with gac
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="invisible_char">●</property>
-                            <property name="text" translatable="yes">ka99-130313</property>
+                            <property name="text" translatable="yes">ka99</property>
                             <property name="primary_icon_activatable">False</property>
                             <property name="secondary_icon_activatable">False</property>
                           </object>
