--- a/src/positrack.glade
+++ b/src/positrack.glade
@@ -907,6 +907,7 @@ You should have received a copy of the GNU General Public License along with pos
                         <property name="position">2</property>
                       </packing>
                     </child>
+
                     <child>
                       <object class="GtkTextView" id="textview1">
                         <property name="visible">True</property>
@@ -916,6 +917,21 @@ You should have received a copy of the GNU General Public License along with pos
                         <property name="expand">True</property>
                         <property name="fill">True</property>
                         <property name="position">3</property>
+                      </packing>
+                    </child>
+
+		    <child>
+                      <object class="GtkButton" id="refreshbutton">
+	                <property name="visible">True</property>
+			<property name="can_focus">False</property>
+			<property name="label" translatable="yes">Refresh Path</property>
+			<property name="use_underline">True</property>
+			<signal name="clicked" handler="on_refreshbutton_clicked" after="yes" swapped="no"/>
+                      </object>
+                      <packing>
+                        <property name="expand">True</property>
+                        <property name="fill">True</property>
+                        <property name="position">4</property>
                       </packing>
                     </child>
                   </object>
